// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MemberOptionsMenu  looking at member, when I am owner renders correctly 1`] = `
<withI18nextTranslation(PopupMenu)
  actions={
    Array [
      Object {
        "onPress": [Function],
        "text": "Make Admin",
      },
      Object {
        "onPress": [Function],
        "text": "Make Owner",
      },
      Object {
        "onPress": [Function],
        "text": "Remove Member",
      },
    ]
  }
  containerStyle={
    Object {
      "height": 32,
      "width": 32,
    }
  }
/>
`;

exports[`MemberOptionsMenu for me, as owner renders correctly 1`] = `
<withI18nextTranslation(PopupMenu)
  actions={
    Array [
      Object {
        "onPress": [Function],
        "text": "Leave Community",
      },
    ]
  }
  containerStyle={
    Object {
      "height": 32,
      "width": 32,
    }
  }
/>
`;

exports[`MemberOptionsMenu renders for admin looking at admin 1`] = `
<withI18nextTranslation(PopupMenu)
  actions={
    Array [
      Object {
        "onPress": [Function],
        "text": "Remove as Admin",
      },
      Object {
        "onPress": [Function],
        "text": "Remove Member",
      },
    ]
  }
  containerStyle={
    Object {
      "height": 32,
      "width": 32,
    }
  }
/>
`;

exports[`MemberOptionsMenu renders for admin looking at member 1`] = `
<withI18nextTranslation(PopupMenu)
  actions={
    Array [
      Object {
        "onPress": [Function],
        "text": "Make Admin",
      },
      Object {
        "onPress": [Function],
        "text": "Remove Member",
      },
    ]
  }
  containerStyle={
    Object {
      "height": 32,
      "width": 32,
    }
  }
/>
`;

exports[`MemberOptionsMenu renders for owner looking at admin 1`] = `
<withI18nextTranslation(PopupMenu)
  actions={
    Array [
      Object {
        "onPress": [Function],
        "text": "Remove as Admin",
      },
      Object {
        "onPress": [Function],
        "text": "Make Owner",
      },
      Object {
        "onPress": [Function],
        "text": "Remove Member",
      },
    ]
  }
  containerStyle={
    Object {
      "height": 32,
      "width": 32,
    }
  }
/>
`;
